src/test/deca/context/valid/added/result_dir/test_general_2.deca
{
  int i = 0;
  if(i==0){
    println("Hello World !");
    i = 1;
  } else if(i==1){
    println("Hello Moon !");
  } else {
    println("Hello You !");
  }
}
