src/test/deca/context/invalid/added/test_dir/use_var_with_wrong_inst.deca
{
 int i = 0;
 i = "Hello World !";
}
